--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -1,56 +1,55 @@
 {%TEMPLATE->struct/head%}
 {%TEMPLATE->struct/menu%}
 
-<div id="index-banner" class="parallax-container">
-  <div class="section no-pad-bot">
-    <div class="container">
-      <br><br>
-      <h1 class="header center teal-text text-lighten-2">Cineast Evaluator</h1>
+{{IF [[user.isLoggedin()]]}}
+
+{{ELSE}}
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center teal-text text-lighten-2">Cineast Evaluator</h1>
+      </div>
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <!-- placeholder -->
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center indigo-text text-darken-4"><i class="material-icons">account box</i></h2>
+            <h5 class="center">Login</h5>
+
+            <form action="login.php">
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="username" name="username" type="text" class="validate">
+                  <label for="username">Username</label>
+                </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="password" type="password" name="password" class="validate">
+                  <label for="password">Password</label>
+                </div>
+              </div>
+              <div class="row">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                  <i class="material-icons right">send</i>
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <!-- placeholder -->
+        </div>
+      </div>
+
     </div>
   </div>
-</div>
-
-
-<div class="container">
-  <div class="section">
-
-    <!--   Icon Section   -->
-    <div class="row">
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-          <h5 class="center">Speeds up development</h5>
-
-          <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our
-            custom components. Additionally, we refined animations and transitions to provide a smoother experience for
-            developers.</p>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-          <h5 class="center">User Experience Focused</h5>
-
-          <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework
-            that incorporates components and animations that provide more feedback to users. Additionally, a single
-            underlying responsive system across all platforms allow for a more unified user experience.</p>
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="icon-block">
-          <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-          <h5 class="center">Easy to work with</h5>
-
-          <p class="light">We have provided detailed documentation as well as specific code examples to help new users
-            get started. We are also always open to feedback and can answer any questions a user may have about
-            Materialize.</p>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</div>
-
+{{ENDIF}}
 {%TEMPLATE->struct/foot%}
