--- a/templating/templates/struct/menu.template.html
+++ b/templating/templates/struct/menu.template.html
@@ -1,12 +1,12 @@
 <nav class="white" role="navigation">
   <div class="nav-wrapper container">
-    <a id="logo-container" href="#" class="brand-logo">Logo</a>
+    <a id="logo-container" href="index.php" class="brand-logo">Cineast Evaluator</a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="#">Navbar Link</a></li>
+      <li[[menu.isActive('home')]]><a href="index.php">Home</a></li>
     </ul>
 
     <ul id="nav-mobile" class="side-nav">
-      <li><a href="#">Navbar Link</a></li>
+      <li[[menu.isActive('home')]]><a href="index.php">Home</a></li>
     </ul>
     <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
   </div>
