--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -19,9 +19,9 @@
 
         <div class="col s12 m4">
           <h2 class="center indigo-text text-darken-4"><i class="material-icons">account box</i></h2>
-          <h5 class="center">Login</h5>
+          <h5 class="center indigo-text text-darken-4">Login</h5>
 
-          <form action="login.php">
+          <form action="login.php" method="post" class="col s12">
             <div class="row">
               <div class="input-field col s12">
                 <input id="username" name="username" type="text" class="validate">
