--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -18,8 +18,8 @@
         </div>
 
         <div class="col s12 m4">
-          <h2 class="center indigo-text text-darken-4"><i class="material-icons">account box</i></h2>
-          <h5 class="center indigo-text text-darken-4">Login</h5>
+          <h2 class="center"><i class="material-icons">person_pin</i></h2>
+          <h5 class="center">Login</h5>
 
           <form action="login.php" method="post" class="col s12">
             <div class="row">
