fixed form input fields

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -18,8 +18,7 @@
         </div>
 
         <div class="col s12 m4">
-          <h2 class="center"><i class="material-icons">person_pin</i></h2>
-          <h5 class="center">Login</h5>
+          <h4 class="center"><i class="material-icons">person_pin</i> Login</h4>
 
           <form action="login.php" method="post" class="col s12">
             <div class="row">
