added menu entries

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -2,14 +2,10 @@
 {%TEMPLATE->struct/menu%}
 
 {{IF [[user.isLoggedin()]]}}
-
+  TODO: show here something when logged in
 {{ELSE}}
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center teal-text text-lighten-2">Cineast Evaluator</h1>
-      </div>
 
       <!--   Icon Section   -->
       <div class="row">
