--- a/templating/templates/struct/menu.template.html
+++ b/templating/templates/struct/menu.template.html
@@ -2,11 +2,11 @@
   <div class="nav-wrapper container">
     <a id="logo-container" href="index.php" class="brand-logo">Cineast Evaluator</a>
     <ul class="right hide-on-med-and-down">
-      <li[[menu.isActive('home')]]><a href="index.php">Home</a></li>
+      {%TEMPLATE->struct/menu_entries%}
     </ul>
 
     <ul id="nav-mobile" class="side-nav">
-      <li[[menu.isActive('home')]]><a href="index.php">Home</a></li>
+      {%TEMPLATE->struct/menu_entries%}
     </ul>
     <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
   </div>
