--- a/templating/templates/struct/menu_entries.template.html
+++ b/templating/templates/struct/menu_entries.template.html
@@ -2,5 +2,6 @@
 {{IF [[user.isLoggedin()]]}}
   <li[[menu.isActive('queries')]]><a href="queries.php">Queries</a></li>
   <li[[menu.isActive('import')]]><a href="import.php">Import</a></li>
+  <li[[menu.isActive('account')]]><a href="account.php">Account</a></li>
   <li><a href="logout.php">Logout</a></li>
 {{ENDIF}}
