added timing for error messages

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -19,7 +19,7 @@
           {{IF [[error]]}}
             <script type="text/javascript">
               $(document).ready(function(){
-                  Materialize.toast('[[errorMessage]]', 4000, 'red');
+                  Materialize.toast('[[errorMessage]]', 4000, 'red centered');
               });
             </script>
           {{ENDIF}}
