--- a/templating/templates/struct/menu_entries.template.html
+++ b/templating/templates/struct/menu_entries.template.html
@@ -1,5 +1,5 @@
 <li[[menu.isActive('home')]]><a href="index.php">Home</a></li>
-{{IF [[user.isLoggedin()]]}}
+{{IF [[login.isLoggedin()]]}}
   <li[[menu.isActive('queries')]]><a href="queries.php">Queries</a></li>
   <li[[menu.isActive('import')]]><a href="import.php">Import</a></li>
   <li[[menu.isActive('account')]]><a href="account.php">Account</a></li>
