--- a/templating/templates/content/account.template.html
+++ b/templating/templates/content/account.template.html
@@ -3,7 +3,35 @@
 
 <div class="container">
   <h3>Account Management</h3>
-
+  <div class="row">
+    <h5>Change Password</h5>
+    <form action="account.php" method="post">
+      <input type="hidden" name="action" value="changePassword">
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="oldPassword" type="password" name="password" class="validate">
+          <label for="oldPassword">Old Password</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="newPassword" type="password" name="password" class="validate">
+          <label for="newPassword">New Password</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="repeatPassword" type="password" name="password" class="validate">
+          <label for="repeatPassword">Repeat New Password</label>
+        </div>
+      </div>
+      <div class="row">
+        <button class="btn waves-effect waves-light" type="submit" name="action">Change
+          <i class="material-icons right">send</i>
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
 
 {%TEMPLATE->struct/foot%}
