fixed name conflict

--- a/templating/templates/content/account.template.html
+++ b/templating/templates/content/account.template.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="row">
-        <button class="btn waves-effect waves-light" type="submit" name="action">Change
+        <button class="btn waves-effect waves-light" type="submit">Change
           <i class="material-icons right">send</i>
         </button>
       </div>
