fixed input fields

--- a/templating/templates/content/account.template.html
+++ b/templating/templates/content/account.template.html
@@ -9,19 +9,19 @@
       <input type="hidden" name="action" value="changePassword">
       <div class="row">
         <div class="input-field col s12">
-          <input id="oldPassword" type="password" name="password" class="validate">
+          <input id="oldPassword" type="password" name="oldPassword" class="validate">
           <label for="oldPassword">Old Password</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="newPassword" type="password" name="password" class="validate">
+          <input id="newPassword" type="password" name="newPassword" class="validate">
           <label for="newPassword">New Password</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="repeatPassword" type="password" name="password" class="validate">
+          <input id="repeatPassword" type="password" name="repeatPassword" class="validate">
           <label for="repeatPassword">Repeat New Password</label>
         </div>
       </div>
