updated container class

--- a/templating/templates/content/queries.template.html
+++ b/templating/templates/content/queries.template.html
@@ -1,7 +1,7 @@
 {%TEMPLATE->struct/head%}
 {%TEMPLATE->struct/menu%}
 
-<div class="row">
+<div class="parallax-container">
 
   <a class="btn-floating btn-large waves-effect waves-light green" href="queries.php?new=true"><i class="material-icons">add</i></a>
 
