--- a/templating/templates/content/queries.template.html
+++ b/templating/templates/content/queries.template.html
@@ -1,7 +1,8 @@
 {%TEMPLATE->struct/head%}
 {%TEMPLATE->struct/menu%}
 
-<div class="parallax-container">
+<div class="container">
+  <h3>Queries</h3>
 
   <a class="btn-floating btn-large waves-effect waves-light green" href="queries.php?new=true"><i class="material-icons">add</i></a>
 
