--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,16 @@ footer.page-footer {
 .container {
     color: #000000;
 }
+
+/**
+ * 	Footer sticks to bottom of the site
+ */
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+}
