--- a/templating/templates/content/queries.template.html
+++ b/templating/templates/content/queries.template.html
@@ -1,35 +1,36 @@
 {%TEMPLATE->struct/head%}
 {%TEMPLATE->struct/menu%}
+<main>
+  <div class="container">
+    <h3>Queries</h3>
 
-<div class="container">
-  <h3>Queries</h3>
+    <a class="btn-floating btn-large waves-effect waves-light green" href="queries.php?new=true"><i class="material-icons">add</i></a>
 
-  <a class="btn-floating btn-large waves-effect waves-light green" href="queries.php?new=true"><i class="material-icons">add</i></a>
-
-  <table class="striped">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Query Name</th>
-        <th>Added by User</th>
-        <th>Is completed</th>
-        <th>&nbsp;</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      {{FOREACH query;[[queries]]}}
+    <table class="striped">
+      <thead>
         <tr>
-          <td>[[query.getId()]]</td>
-          <td>[[query.getDisplayName()]]</td>
-          <td>[[Util::getUsernameById([[query.getUserId()]])]]</td>
-          <td>{{IF [[query.getIsClosed()]] == 0}}No{{ELSE}}YES{{ENDIF}}</td>
-          <td>TODO button</td>
+          <th>ID</th>
+          <th>Query Name</th>
+          <th>Added by User</th>
+          <th>Is completed</th>
+          <th>&nbsp;</th>
         </tr>
-      {{ENDFOREACH}}
-    </tbody>
-  </table>
+      </thead>
 
-</div>
+      <tbody>
+        {{FOREACH query;[[queries]]}}
+          <tr>
+            <td>[[query.getId()]]</td>
+            <td>[[query.getDisplayName()]]</td>
+            <td>[[Util::getUsernameById([[query.getUserId()]])]]</td>
+            <td>{{IF [[query.getIsClosed()]] == 0}}No{{ELSE}}YES{{ENDIF}}</td>
+            <td>TODO button</td>
+          </tr>
+        {{ENDFOREACH}}
+      </tbody>
+    </table>
+
+  </div>
+</main>
 
 {%TEMPLATE->struct/foot%}
