--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -1,48 +1,49 @@
 {%TEMPLATE->struct/head%}
 {%TEMPLATE->struct/menu%}
+<main>
+  {{IF [[login.isLoggedin()]]}}
+    TODO: show here something when logged in
+  {{ELSE}}
+    <div id="index-banner" class="parallax-container">
+      <div class="section no-pad-bot">
 
-{{IF [[login.isLoggedin()]]}}
-  TODO: show here something when logged in
-{{ELSE}}
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
+        <!--   Icon Section   -->
+        <div class="row">
+          <div class="col s12 m4">
+            <!-- placeholder -->
+          </div>
 
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <!-- placeholder -->
-        </div>
+          <div class="col s12 m4">
+            <h4 class="center"><i class="material-icons">person_pin</i> Login</h4>
 
-        <div class="col s12 m4">
-          <h4 class="center"><i class="material-icons">person_pin</i> Login</h4>
-
-          <form action="login.php" method="post" class="col s12">
-            <div class="row">
-              <div class="input-field col s12">
-                <input id="username" name="username" type="text" class="validate">
-                <label for="username">Username</label>
+            <form action="login.php" method="post" class="col s12">
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="username" name="username" type="text" class="validate">
+                  <label for="username">Username</label>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div class="input-field col s12">
-                <input id="password" type="password" name="password" class="validate">
-                <label for="password">Password</label>
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="password" type="password" name="password" class="validate">
+                  <label for="password">Password</label>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                <i class="material-icons right">send</i>
-              </button>
-            </div>
-          </form>
+              <div class="row">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                  <i class="material-icons right">send</i>
+                </button>
+              </div>
+            </form>
+          </div>
+
+          <div class="col s12 m4">
+            <!-- placeholder -->
+          </div>
         </div>
 
-        <div class="col s12 m4">
-          <!-- placeholder -->
-        </div>
       </div>
-
     </div>
-  </div>
-{{ENDIF}}
+  {{ENDIF}}
+</main>
 {%TEMPLATE->struct/foot%}
