added upload handling

--- a/templating/templates/content/queries/new.template.html
+++ b/templating/templates/content/queries/new.template.html
@@ -15,7 +15,7 @@
       <div class="file-field input-field">
         <div class="btn">
           <span>Query Data (.zip)</span>
-          <input type="file">
+          <input type="file" name="file">
         </div>
         <div class="file-path-wrapper">
           <input class="file-path validate" type="text">
