--- a/templating/templates/content/mediatypes.template.html
+++ b/templating/templates/content/mediatypes.template.html
@@ -20,7 +20,9 @@
             <td>[[mediaType.getId()]]</td>
             <td>[[mediaType.getTypeName()]]</td>
             <td>[[mediaType.getExtension()]]</td>
-            <td>TODO button</td>
+            <td>
+              <a class="btn-floating waves-effect waves-light blue" href="mediatypes.php?edit=[[mediaType.getId()]]"><i class="material-icons">mode_edit</i></a>
+            </td>
           </tr>
         {{ENDFOREACH}}
       </tbody>
