added template setting to media type added form for editing media types

--- a/templating/templates/content/mediatypes/index.template.html
+++ b/templating/templates/content/mediatypes/index.template.html
@@ -20,7 +20,7 @@
             <td>[[mediaType.getId()]]</td>
             <td>[[mediaType.getTypeName()]]</td>
             <td>[[mediaType.getExtension()]]</td>
-            <td>
+            <td class="right-align">
               <a class="btn-floating waves-effect waves-light blue" href="mediatypes.php?edit=[[mediaType.getId()]]"><i class="material-icons">mode_edit</i></a>
             </td>
           </tr>
