--- a/templating/templates/struct/foot.template.html
+++ b/templating/templates/struct/foot.template.html
@@ -40,5 +40,11 @@
   </script>
 {{ENDIF}}
 
+<script type="text/javascript">
+  $(document).ready(function() {
+      $('select').material_select();
+  });
+</script>
+
 </body>
 </html>
