added edit button

--- a/templating/templates/content/mediatypes/edit.template.html
+++ b/templating/templates/content/mediatypes/edit.template.html
@@ -15,7 +15,7 @@
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="typeName" type="text" name="typeName" class="validate">
+          <input id="typeName" type="text" name="typeName" value="[[mediaType.getTypeName()]]" class="validate">
           <label for="typeName">Extension Name</label>
         </div>
       </div>
