--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -37,7 +37,7 @@
         {{FOREACH result;[[results]]}}
           <tr>
             <td>[[result.getId()]]</td>
-            <td>[[Util::getMediaTypeForObject([[result.getObjectId2()]]).getTypeName()]]</td>
+            <td>[[Util::getMediaTypeNameForObject([[result.getObjectId2()]])]]</td>
             <td class="right-align">
               TODO
             </td>
