--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -2,7 +2,7 @@
 {%TEMPLATE->struct/menu%}
 <main>
   <div class="container">
-    <h3>Query '[[query.getQueryName()]]'</h3>
+    <h3>Query '[[query.getDisplayName()]]'</h3>
 
     <table class="striped">
       <tbody>
