added preview link

--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -39,7 +39,7 @@
             <td>[[result.getId()]]</td>
             <td>[[Util::getMediaTypeNameForObject([[result.getObjectId2()]])]]</td>
             <td class="right-align">
-              TODO
+              <a class="btn-floating waves-effect waves-light blue" target="_blank" href="preview.php?object=[[result.getObjectId1()]]"><i class="material-icons">visibility</i></a>
             </td>
           </tr>
         {{ENDFOREACH}}
