--- a/templating/templates/content/queries/detail.template.html
+++ b/templating/templates/content/queries/detail.template.html
@@ -17,7 +17,7 @@
         <tr>
           <th>Query Object</th>
           <td>
-            TODO: add some info here
+            <a class="btn-floating waves-effect waves-light blue" target="_blank" href="preview.php?object=[[queryObjectId]]"><i class="material-icons">visibility</i></a>
           </td>
         </tr>
       </tbody>
