--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -1,8 +1,8 @@
 {%TEMPLATE->struct/head%}
 <main style="margin-top: 50px;">
   <div class="container">
-    <div class="row">
-      <div class="col s12 m6" style="vertical-align: bottom;">
+    <div class="row" style="vertical-align: bottom; display: table-cell;">
+      <div class="col s12 m6">
         {{FOREACH objectData;[[value1.getVal('objData')]]}}
           {{IF [[value1.getVal('template')]] == "default"}}
             {%TEMPLATE->media/default%}
@@ -12,7 +12,7 @@
           {{ENDIF}}
         {{ENDFOREACH}}
       </div>
-      <div class="col s12 m6" style="vertical-align: bottom;">
+      <div class="col s12 m6">
         {{FOREACH objectData;[[value2.getVal('objData')]]}}
           {{IF [[value2.getVal('template')]] == "default"}}
             {%TEMPLATE->media/default%}
@@ -23,7 +23,7 @@
         {{ENDFOREACH}}
       </div>
     </div>
-    <div class="row">
+    <div class="row" style="text-align: center;">
       <form action="running.php" method="post">
         <input type="hidden" name="objectId1" value="[[object1.getId()]]">
         <input type="hidden" name="objectId2" value="[[object2.getId()]]">
