--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -32,13 +32,13 @@
         <div class="row">
           <input name="group1" type="radio" id="option1">
           <label for="option1">No Similarity</label>
-
+          &nbsp;&nbsp;&nbsp;
           <input name="group1" type="radio" id="option2">
           <label for="option2">Slightly Similar</label>
-
+          &nbsp;&nbsp;&nbsp;
           <input name="group1" type="radio" id="option3">
           <label for="option3">Very Similar</label>
-
+          &nbsp;&nbsp;&nbsp;
           <input name="group1" type="radio" id="option4">
           <label for="option4">Nearly Identical</label>
         </div>
