vertical align to bottom

--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -3,7 +3,7 @@
   <div class="container">
     <style>
       .valign-wrapper {
-        vertical-align: middle;
+        vertical-align: bottom;
       }
     </style>
     <div class="row valign-wrapper" style="height: 100%;">
