updated for input validation

--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -35,16 +35,16 @@
         <input type="hidden" name="objectId2" value="[[object2.getId()]]">
 
         <div class="row">
-          <input name="group1" type="radio" id="option1">
+          <input name="group1" value="0" type="radio" id="option1" required aria-required="true">
           <label for="option1">No Similarity</label>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <input name="group1" type="radio" id="option2">
+          <input name="group1" value="1" type="radio" id="option2" required aria-required="true">
           <label for="option2">Slightly Similar</label>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <input name="group1" type="radio" id="option3">
+          <input name="group1" value="2" type="radio" id="option3" required aria-required="true">
           <label for="option3">Very Similar</label>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <input name="group1" type="radio" id="option4">
+          <input name="group1" value="3" type="radio" id="option4" required aria-required="true">
           <label for="option4">Nearly Identical</label>
         </div>
 
