added container for placeholder

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -2,7 +2,9 @@
 {%TEMPLATE->struct/menu%}
 <main>
   {{IF [[login.isLoggedin()]]}}
-    TODO: show here something when logged in
+    <div class="container">
+      TODO: show here something when logged in
+    </div>
   {{ELSE}}
     <div id="index-banner" class="parallax-container">
       <div class="section no-pad-bot">
