--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -1,51 +1,8 @@
 {%TEMPLATE->struct/head%}
 {%TEMPLATE->struct/menu%}
 <main>
-  {{IF [[login.isLoggedin()]]}}
-    <div class="container">
-      TODO: show here something when logged in
-    </div>
-  {{ELSE}}
-    <div id="index-banner" class="parallax-container">
-      <div class="section no-pad-bot">
-
-        <!--   Icon Section   -->
-        <div class="row">
-          <div class="col s12 m4">
-            <!-- placeholder -->
-          </div>
-
-          <div class="col s12 m4">
-            <h4 class="center"><i class="material-icons">person_pin</i> Login</h4>
-
-            <form action="login.php" method="post" class="col s12">
-              <div class="row">
-                <div class="input-field col s12">
-                  <input id="username" name="username" type="text" class="validate">
-                  <label for="username">Username</label>
-                </div>
-              </div>
-              <div class="row">
-                <div class="input-field col s12">
-                  <input id="password" type="password" name="password" class="validate">
-                  <label for="password">Password</label>
-                </div>
-              </div>
-              <div class="row">
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                  <i class="material-icons right">send</i>
-                </button>
-              </div>
-            </form>
-          </div>
-
-          <div class="col s12 m4">
-            <!-- placeholder -->
-          </div>
-        </div>
-
-      </div>
-    </div>
-  {{ENDIF}}
+  <div class="container">
+    Welcome to <i>TODO: insert some title here</i>!
+  </div>
 </main>
 {%TEMPLATE->struct/foot%}
