--- a/templating/templates/struct/menu.template.html
+++ b/templating/templates/struct/menu.template.html
@@ -17,7 +17,7 @@
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
-        {%TEMPLATE->menu/admin_entries%}
+        {%TEMPLATE->struct/menu_entries%}
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     {{ENDIF}}
