--- a/templating/templates/struct/menu.template.html
+++ b/templating/templates/struct/menu.template.html
@@ -1,6 +1,6 @@
 <nav class="white" role="navigation">
   <div class="nav-wrapper container">
-    {{IF administrator}}
+    {{IF [[administrator]]}}
       <a id="logo-container" href="admin.php" class="brand-logo">Cineast Evaluator</a>
       <ul class="right hide-on-med-and-down">
         {%TEMPLATE->struct/admin_entries%}
