changed preview and running to use the serve method to provide data content

--- a/templating/templates/content/admin.template.html
+++ b/templating/templates/content/admin.template.html
@@ -3,7 +3,9 @@
 <main>
   {{IF [[login.isLoggedin()]]}}
     <div class="container">
-      TODO: show here something when logged in
+      <div class="row">
+        TODO: show here something when logged in
+      </div>
     </div>
   {{ELSE}}
     <div id="index-banner" class="parallax-container">
