--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -2,7 +2,10 @@
 {%TEMPLATE->struct/menu%}
 <main>
   <div class="container">
-    Welcome to <i>TODO: insert some title here</i>!
+    <div class="row">
+      Welcome to <i>TODO: insert some title here</i>!<br><br>
+      This is the gamification part of the Cineast Evaluator
+    </div>
   </div>
 </main>
 {%TEMPLATE->struct/foot%}
