--- a/templating/templates/media/default.template.html
+++ b/templating/templates/media/default.template.html
@@ -1,1 +1,2 @@
-This is the default template for media comparison. TODO
+This is the default template for media comparison.
+I should display [[objectSource]]
