--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -8,7 +8,7 @@
     </style>
     <div class="row valign-wrapper" style="height: 100%;">
       <div class="col s12 m6">
-        {{FOREACH objectData;[[value1.getVal('objData')]]}}
+        {{FOREACH objectSource;[[value1.getVal('objData')]]}}
           {{IF [[value1.getVal('template')]] == "default"}}
             {%TEMPLATE->media/default%}
           {{ENDIF}}
@@ -18,7 +18,7 @@
         {{ENDFOREACH}}
       </div>
       <div class="col s12 m6">
-        {{FOREACH objectData;[[value2.getVal('objData')]]}}
+        {{FOREACH objectSource;[[value2.getVal('objData')]]}}
           {{IF [[value2.getVal('template')]] == "default"}}
             {%TEMPLATE->media/default%}
           {{ENDIF}}
