--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -30,28 +30,20 @@
     </div>
     <br>
     <div class="row" style="text-align: center;">
-      <form action="running.php" method="post">
+      <form action="running2.php" method="post">
         <input type="hidden" name="objectId1" value="[[object1.getId()]]">
         <input type="hidden" name="objectId2" value="[[object2.getId()]]">
 
-        <div class="row">
-          <input name="group1" value="0" type="radio" id="option1" required aria-required="true">
-          <label for="option1">No Similarity</label>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <input name="group1" value="1" type="radio" id="option2" required aria-required="true">
-          <label for="option2">Slightly Similar</label>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <input name="group1" value="2" type="radio" id="option3" required aria-required="true">
-          <label for="option3">Very Similar</label>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <input name="group1" value="3" type="radio" id="option4" required aria-required="true">
-          <label for="option4">Nearly Identical</label>
-        </div>
+        <b>How similar are these two objects?</b><br>
 
         <div class="row">
-          <button class="btn waves-effect waves-light" type="submit">Continue
-            <i class="material-icons right">send</i>
-          </button>
+          <button class="btn waves-effect waves-light" name="answer" value="0" type="submit">No Similarity</button>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <button class="btn waves-effect waves-light" name="answer" value="1" type="submit">Slightly Similar</button>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <button class="btn waves-effect waves-light" name="answer" value="2" type="submit">Very Similar</button>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <button class="btn waves-effect waves-light" name="answer" value="3" type="submit">Nearly Identical</button>
         </div>
       </form>
     </div>
