--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -6,6 +6,11 @@
         align-items: baseline;
       }
     </style>
+    <div class="row" style="text-align: center;">
+      {{IF [[lastAnswer]]}}
+        [[lastAnswer]]
+      {{ENDIF}}
+    </div>
     <div class="row valign-wrapper" style="height: 100%;">
       <div class="col s12 m6">
         {{FOREACH objectSource;[[value1.getVal('objData')]]}}
