--- a/templating/templates/views/compare3.template.html
+++ b/templating/templates/views/compare3.template.html
@@ -50,7 +50,8 @@
         <input type="hidden" name="objectId2" value="[[object2.getId()]]">
         <input type="hidden" name="objectId3" value="[[object3.getId()]]">
 
-        <b>Which object matches better to the object in the center?</b><br>
+        <b>Which object matches better to the object in the center?</b><br><br>
+
         <div class="row">
           <button class="btn waves-effect waves-light" name="answer" value="left" type="submit">Left</button>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
