removed url so it always sends to the same url where it loaded

--- a/templating/templates/views/compare3.template.html
+++ b/templating/templates/views/compare3.template.html
@@ -45,7 +45,7 @@
     </div>
     <br>
     <div class="row" style="text-align: center;">
-      <form action="running3.php" method="post">
+      <form action="" method="post">
         <input type="hidden" name="objectId1" value="[[object1.getId()]]">
         <input type="hidden" name="objectId2" value="[[object2.getId()]]">
         <input type="hidden" name="objectId3" value="[[object3.getId()]]">
