--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -35,7 +35,7 @@
     </div>
     <br>
     <div class="row" style="text-align: center;">
-      <form action="running2.php" method="post">
+      <form action="" method="post">
         <input type="hidden" name="objectId1" value="[[object1.getId()]]">
         <input type="hidden" name="objectId2" value="[[object2.getId()]]">
 
