fixed problem with empty questions array added load time

--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -6,11 +6,6 @@
         align-items: baseline;
       }
     </style>
-    <div class="row" style="text-align: center;">
-      {{IF [[lastAnswer]]}}
-        [[lastAnswer]]
-      {{ENDIF}}
-    </div>
     <div class="row valign-wrapper" style="height: 100%;">
       <div class="col s12 m6">
         {{FOREACH objectSource;[[value1.getVal('objData')]]}}
@@ -54,4 +49,5 @@
     </div>
   </div>
 </main>
+<!-- [[loadTime]] -->
 {%TEMPLATE->struct/emptyfoot%}
