--- a/templating/templates/views/compare3.template.html
+++ b/templating/templates/views/compare3.template.html
@@ -6,11 +6,6 @@
         align-items: baseline;
       }
     </style>
-    <div class="row" style="text-align: center;">
-      {{IF [[lastAnswer]]}}
-        [[lastAnswer]]
-      {{ENDIF}}
-    </div>
     <div class="row valign-wrapper" style="height: 100%;">
       <div class="col s12 m4">
         {{FOREACH objectSource;[[value2.getVal('objData')]]}}
@@ -61,4 +56,5 @@
     </div>
   </div>
 </main>
+<!-- [[loadTime]] -->
 {%TEMPLATE->struct/emptyfoot%}
