--- a/templating/templates/content/admin.template.html
+++ b/templating/templates/content/admin.template.html
@@ -4,7 +4,7 @@
   {{IF [[login.isLoggedin()]]}}
     <div class="container">
       <div class="row">
-        TODO: show here something when logged in
+        <a class="btn-large waves-effect waves-light blue" href="session.php" target="_blank">Answer some Questions</a> (Important these answers will be considered as very certain)
       </div>
     </div>
   {{ELSE}}
