--- a/templating/templates/content/admin.template.html
+++ b/templating/templates/content/admin.template.html
@@ -4,6 +4,7 @@
   {{IF [[login.isLoggedin()]]}}
     <div class="container">
       <div class="row">
+        <h3>Admin Home</h3>
         <a class="btn-large waves-effect waves-light blue" href="session.php" target="_blank">Answer some Questions</a> (Important these answers will be considered as very certain)
       </div>
     </div>
