set image height

--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -7,7 +7,7 @@
       }
     </style>
     <div class="row valign-wrapper" style="height: 100%;">
-      <div class="col s12 m6">
+      <div class="col s12 m6" style="text-align: center;">
         {{FOREACH objectSource;[[value1.getVal('objData')]]}}
           {{IF [[value1.getVal('template')]] == "default"}}
             {%TEMPLATE->media/default%}
@@ -17,7 +17,7 @@
           {{ENDIF}}
         {{ENDFOREACH}}
       </div>
-      <div class="col s12 m6">
+      <div class="col s12 m6" style="text-align: center;">
         {{FOREACH objectSource;[[value2.getVal('objData')]]}}
           {{IF [[value2.getVal('template')]] == "default"}}
             {%TEMPLATE->media/default%}
