--- a/templating/templates/views/preview.template.html
+++ b/templating/templates/views/preview.template.html
@@ -2,12 +2,14 @@
 <main>
   <div class="container">
     <h3>Preview</h3>
-    {{IF [[template]] == "default"}}
-      {%TEMPLATE->media/default%}
-    {{ENDIF}}
-    {{IF [[template]] == "image"}}
-      {%TEMPLATE->media/image%}
-    {{ENDIF}}
+    <div class="text-align: center;">
+      {{IF [[template]] == "default"}}
+        {%TEMPLATE->media/default%}
+      {{ENDIF}}
+      {{IF [[template]] == "image"}}
+        {%TEMPLATE->media/image%}
+      {{ENDIF}}
+    </div>
   </div>
 </main>
 {%TEMPLATE->struct/emptyfoot%}
