--- a/templating/templates/media/image.template.html
+++ b/templating/templates/media/image.template.html
@@ -1,1 +1,1 @@
-<img class="materialboxed" width="100%" src="[[objectSource]]">
+<img class="materialboxed" style="height: 70vh;" src="[[objectSource]]">
