--- a/templating/templates/media/image.template.html
+++ b/templating/templates/media/image.template.html
@@ -1,1 +1,1 @@
-<img class="responsive-img" style="height: 50vh; width: auto; margin: 0px auto;" src="[[objectSource]]">
+<img class="responsive-img" style="max-height: 70vh; min-height: 40vh; width: auto; margin: 0px auto;" src="[[objectSource]]">
