added image-rendering property

--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -7,7 +7,7 @@
       }
     </style>
     <div class="row valign-wrapper" style="height: 100%;">
-      <div class="col s12" style="text-align: center;">
+      <div class="col m12" style="text-align: center;">
         {{FOREACH objectSource;[[value1.getVal('objData')]]}}
           {{IF [[value1.getVal('template')]] == "default"}}
             {%TEMPLATE->media/default%}
